--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,9 @@ allow_failure = false
 version = "stable"
 
 [dependencies]
+futures-timer = "3.0.2"
+futures = "0.3.5"
+
+[dev-dependencies]
+proptest = "0.10.0"
+smol = "0.1.18"
