--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ version = "stable"
 futures-timer = "3.0.2"
 futures = "0.3.5"
 
+[target.'cfg(target_family = "wasm")'.dependencies]
+instant = "0.1.12"
+
 [dev-dependencies]
 proptest = "0.10.0"
 smol = "0.1.18"
