--- a/release.toml
+++ b/release.toml
@@ -1,9 +1,11 @@
 sign-commit = false
 pre-release-commit-message = "Release {{version}} 🎉🎉"
-post-release-commit-message = "Start next development iteration {{version}}"
+post-release-commit-message = "Start next development iteration {{next_version}}"
 tag-message = "Release {{prefix}}{{version}}"
 dev-version-ext = "dev"
 tag-prefix = ""
+consolidate-commits = false
+consolidate-pushes = true
 pre-release-replacements = [
   {file="CHANGELOG.md", search="Unreleased", replace="[{{version}}](https://docs.rs/{{crate_name}}/{{version}}/{{crate_name}}/)"},
   {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
