--- a/deny.toml
+++ b/deny.toml
@@ -12,6 +12,7 @@ allow = [
     "BSD-3-Clause",
     "BSD-2-Clause",
     "MIT",
+    "Unicode-DFS-2016", # for unicode-ident
 ]
 deny = []
 copyleft = "warn"
@@ -40,5 +41,4 @@ skip = [
 skip-tree = [
     # criterion & proptest pull in old versions of rand & are dev-dependencies:
     { name = "proptest", version = "*", depth = 3 },
-    { name = "wasi", version = "0.9"}
 ]
